--- a/.github/workflows/w_test.yml
+++ b/.github/workflows/w_test.yml
@@ -18,4 +18,9 @@ jobs:
     - name: test
       run: |
         sudo apt update
-        sudo apt install python3-pip
+        sudo apt-get install python3-setuptools
+        sudo apt-get install python3-pip
+        sudo pip3 install tox
+        tox
+        
+        
