--- a/.github/workflows/w_test.yml
+++ b/.github/workflows/w_test.yml
@@ -21,6 +21,7 @@ jobs:
         sudo apt-get install python3-setuptools
         sudo apt-get install python3-pip
         sudo pip3 install tox
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -yq install python3.7
         tox
         
         
