--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Tox
       run: |
         if tox ; then
-          anybadge.py --label=pipeline --value=passing --file=pipeline.svg passing=green failing=red
+          anybadge --label=pipeline --value=passing --file=pipeline.svg passing=green failing=red
         else
-          anybadge.py --label=pipeline --value=failing --file=pipeline.svg passing=green failing=red
+          anybadge --label=pipeline --value=failing --file=pipeline.svg passing=green failing=red
         fi
         anybadge --value=`coverage report -m | grep TOTAL | tr -s ' ' | cut -d ' ' -f 4 | sed 's/%//'` --file=coverage.svg coverage
         
