Added coverage install

--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -16,6 +16,7 @@ jobs:
         sudo apt-get install python3-setuptools
         sudo apt-get install python3-pip
         sudo pip3 install tox
+        sudo pip3 install coverage
         sudo pip3 install anybadge
         sudo DEBIAN_FRONTEND=noninteractive apt-get -yq install python3.7
 
